--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ nav li a{
 }
 .nav-title{
     color: #131318;
-    font-size: 2rem;
+    
     font-style: normal;
     font-weight: 800;
     line-height: normal;
@@ -72,25 +72,6 @@ nav li a{
     padding: 50px 0;
     align-items: center;
     text-align: center;
-}
-.main-banner{
-    background-image: url('./Images/banner.png');
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: auto;
-    border-radius: 10px;
-    width: 100%;
-    background-attachment: fixed;
-}
-.banner-overlay{
-    background-image:
-    linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%),
-    url('./Images/banner.png');
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    color: white;
-    border-radius: 8px ;
 }
 .travel-head{
     color: #FFF;
@@ -192,6 +173,18 @@ padding: 25px 0;
     border: none;
     margin-bottom: 25px;
     width: 80px;
+}
+.btn1{
+    padding: 10px 20px;
+    border-radius: 10px;
+    background-color: #FF5400;
+    color: white;
+    font-size: 20px;
+    border: none;
+    margin-bottom: 25px;
+    width: 80px;
+    font-weight: bold;
+    margin-top: 30px;
 }
 .tour-img img{
     width: 100%;
@@ -346,6 +339,16 @@ border-radius: 30px;
     width: 30px;
     margin: auto;
     margin-bottom: 20px;
+}
+.roundb{
+    padding: 10px;
+    background-color:rgba(189, 187, 184, 0.815);
+    color: #080808;
+    font-size: 20px;
+    border-radius: 50%;
+    width: 24px;
+    margin: auto;
+  
 }
 .border-right{
     border-right: 1px solid rgb(168, 165, 165);
@@ -748,10 +751,121 @@ padding-top: 100px;
 .h4x{
     padding-bottom: 20px;
 }
+
+.search-container {
+    display: flex;
+    align-items: center;
+}
+
+.search-container input[type="text"] {
+    padding: 10px;
+    border: none;
+    border-radius: 0 5px 5px 0;
+}
+
+.search-container button {
+    /* border-radius: 5px 0 0 5px; */
+    background-color: #f2f2f2;
+    border: none;
+    padding: 10px;
+} .banner {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px;
+    background-color: white;
+}
+
+.banner-text {
+    flex: 1;
+    padding: 20px;
+}
+
+.banner-text h1 {
+    margin: 0 0 20px;
+}
+
+.banner-text p {
+    margin: 30px 0 20px;
+}
+
+/* .banner-text .btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+} */
+
+.banner-images {
+    flex: 1;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+    padding: 20px;
+}
+
+.image-item {
+    text-align: center;
+}
+
+.banner-images img {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+}
+
+.banner-images p {
+    margin-top: 10px;
+    font-size: 1rem;
+    color: #333;
+}
+.banner-text h2 {
+    color: black; /* Default color for h2 */
+    font-weight: bolder;
+    font-size: 52px;
+    text-transform: uppercase;
+    margin-bottom: 50px;
+}
+
+span {
+    color: orangered; 
+     font-weight: bolder;
+    font-size: 52px; text-transform: uppercase;
+}
+.hidden {
+    display: none;
+}
+.banner-top{
+    background-color: #f7a37a8e;
+    padding: 5px 15px;
+    border-radius: 30px;
+    width: 200px;
+    margin-bottom: 40px;
+}
+.x{
+    padding-top: 13px;
+    font-size: 13px; padding-right: 60px;
+}
 /* Media query for responsiveness */
 @media screen and (max-width: 768px) {
     .footer-container > div {
         flex: 1 1 calc(50% - 20px); /* Adjust number of columns */
         max-width: none; /* Remove maximum width */
+    }
+    .banner {
+        flex-direction: column;
+    }
+
+    .banner-text, .banner-images {
+        flex: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    .banner-images {
+        grid-template-columns: 1fr;
     }
 }
