--- a/style.css
+++ b/style.css
@@ -818,7 +818,7 @@ padding-top: 100px;
 }
 
 .banner-images p {
-    margin-top: 10px;
+    /* margin-top: 10px; */
     font-size: 1rem;
     color: #333;
 }
