--- a/responsive.css
+++ b/responsive.css
@@ -142,7 +142,9 @@ iframe{
     display: grid;
     justify-content: center;
    }
-    .grid_col_6{
+    .grid_col_6,
+    .grid_col_4,
+    .grid_col_3{
       grid-column: span 12;
     }
     .grid_col_12{
@@ -185,6 +187,47 @@ iframe{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 25px;
+}
+.round{
+    padding: 26px;
+        background-color: rgba(247, 177, 86, 0.815);
+        color: #FF5400;
+        font-size: 11px;
+        border-radius: 50%;
+        width: 5px;
+        margin: auto;
+        margin-bottom: 20px;
+}
+.roundb {
+    padding: 15px;
+    background-color: rgba(189, 187, 184, 0.815);
+    color: #080808;
+    font-size: 20px;
+    border-radius: 50%;
+    width: 52px;
+    margin: auto;
+}
+.banner-text h2 {
+    color: black;
+    font-weight: bolder;
+    font-size: 26px;
+    text-transform: uppercase;
+    margin-bottom: 50px;
+}
+span {
+    color: orangered;
+    font-weight: bolder;
+    font-size: 27px;
+    text-transform: uppercase;
+}.x {
+    padding-top: 20px;
+    font-size: 13px;
+    padding-right: 27px;
+}
+.footer-container > div {
+    flex: 1 1 calc(90% - 20px); /* Adjust number of columns */
+    max-width: none; /* Remove maximum width */
+    text-align: center;
 }
 }
 
