--- a/style.css
+++ b/style.css
@@ -175,6 +175,16 @@ padding: 25px 0;
     font-size: 1rem;
     border: none;
 }
+.btn{
+    padding: 10px 20px;
+    border-radius: 30px;
+    background-color: #FF5400;
+    color: white;
+    font-size: 10px;
+    border: none;
+    margin-bottom: 25px;
+    width: 80px;
+}
 .tour-img img{
     width: 100%;
     height: auto;
@@ -187,7 +197,7 @@ text-align: center;
 font-size: 20px;
 font-style: normal;
 font-weight: 800;
-line-height: normal;
+
 }
 .h22-tag{
     color: #131318;
@@ -201,6 +211,7 @@ line-height: normal;
     max-width: 600px;
     margin: 0 auto;
     text-align: center;
+    padding: 30px 0;
 } 
 .center{
     text-align: center;
@@ -261,6 +272,27 @@ line-height: normal;
     border-radius: 20px;
     margin: 0 auto;
   }
+   .colx {
+    -webkit-box-shadow: 0px 2px 13px 0px rgba(189,189,189,1);
+    -moz-box-shadow: 0px 2px 13px 0px rgba(189,189,189,1);
+    box-shadow: 0px 2px 13px 0px rgba(189,189,189,1);
+    margin: 10px 20px;
+    border-radius: 20px;
+    /* margin: 0 auto; */
+  } .colss {
+    margin: 10px 20px;
+    padding: 20px 20px;
+    margin: 0 auto;
+    
+  }
+  .bg-gray{
+    background-color: white;
+    -webkit-box-shadow: 0px 2px 13px 0px rgba(189,189,189,1);
+-moz-box-shadow: 0px 2px 13px 0px rgba(189,189,189,1);
+box-shadow: 0px 2px 13px 0px rgba(189,189,189,1);
+padding: 20px 30px;
+border-radius: 30px;
+  }
   .cols:hover{
  -webkit-box-shadow: 0px 2px 5px 0px rgba(138,135,138,1);
     -moz-box-shadow: 0px 2px 5px 0px rgba(138,135,138,1);
@@ -295,14 +327,17 @@ line-height: normal;
     text-align: center;
 }
 .round{
-    padding: 20px;
+    padding: 15px;
     background-color:rgba(247, 177, 86, 0.815);
     color: #FF5400;
     font-size: 20px;
     border-radius: 50%;
-    width: 40px;
+    width: 30px;
     margin: auto;
     margin-bottom: 20px;
+}
+.border-right{
+    border-right: 1px solid rgb(168, 165, 165);
 }
 .video{
     padding-top: 30px;
@@ -347,7 +382,7 @@ input{
 .news-img img{
   height: auto;
     width: 100%;
-   
+
 }
 
 .over{
@@ -476,9 +511,8 @@ line-height: normal;
 padding-top: 100px;
 }
 .blog-img img{
-   border-radius: 135px 0px 75px 135px;
-   border: 10px solid orangered;
-   height: auto;
+  
+   height: 340px;
    width: 100%;
 }
 .blog-post{
@@ -493,4 +527,100 @@ padding-top: 100px;
     font-weight: 800;
     line-height: normal;
     padding-top: 10px;
+}
+
+/* added food */
+.upper-class img{
+    height: 300px;
+    width: 100%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+
+.flex-container {
+    display: flex;
+    flex-wrap: nowrap;
+   
+  }
+  
+  .flex-container > div {
+   
+    width: 200px;
+    margin: 10px;
+    text-align: center;
+ 
+  }
+  .h2-hand{
+    font-size: 15px;
+    font-weight: 800;
+    padding-bottom: 15px;
+  }
+  .small-tag{
+    font-size: 15px;
+    font-weight: lighter;
+    padding: 10px 0;
+  }
+
+
+.testimonial-card {
+    position: relative;
+    text-align: center;
+    background-color: #ffffff;
+    border-radius: 8px;
+    box-shadow: 0 4px 34px rgba(70, 70, 70, 0.1);
+    /* max-width: 400px; */
+    height: 300px;
+    padding: 20px;
+    
+    transition: opacity 0.5s ease;
+}
+.testimonial-header {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+    margin-top: 40px;
+    justify-content: center;
+}
+.testimonial-header img {
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    margin-right: 15px;
+}
+.testimonial-header .name {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+.testimonial-review {
+    font-size: 1em;
+    color: #555;
+}
+.icon-left, .icon-right {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    font-size: 1.5em;
+    color: #888;
+}
+.icon-left {
+    left: -30px;
+    padding: 15px;
+    background-color:rgba(247, 177, 86, 0.815);
+    color: #FF5400;
+    font-size: 20px;
+    border-radius: 50%;
+    /* width: 30px; */
+    /* margin: auto; */
+    /* margin-bottom: 20px; */
+}
+.icon-right {
+    right: -30px;
+    padding: 15px;
+    background-color:rgba(247, 177, 86, 0.815);
+    color: #FF5400;
+    font-size: 20px;
+    border-radius: 50%;
 }
